spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_on_non_struct_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity main(x: (int<8>, int<4>)) -> (int<8>, int<4>) {
    #[wal_trace]
    let y = x;
    x
}


error: #[wal_trace] can only be applied to values of struct type
  ┌─ testinput:2:5
  │
2 │     #[wal_trace]
  │     ^^^^^^^^^^^^ #[wal_trace] on (int<8>, int<4>)
3 │     let y = x;
  │         - This has type (int<8>, int<4>)


